do some changes add update to show data and update in progress

--- a/src/views/showBooks.ejs
+++ b/src/views/showBooks.ejs
@@ -94,7 +94,7 @@
                       
                         <td>
                             <span>
-                                <button type="submit" class="btn"><a href="#">Edit</a></button>
+                                <button type="submit" class="btn"><a href="/edit/<%= user._id %>">Edit</a></button>
                                 <button type="submit" class="btn"><a href="#">Delete</a></button>
                             </span>
                         </td>
