--- a/src/views/update.ejs
+++ b/src/views/update.ejs
@@ -111,7 +111,7 @@
                 </span>
             </div>
             <div class="input-container">
-                <input type="text" placeholder="Enter Authorname">
+                <input type="text" placeholder="Enter Authorname" name="author">
             </div>
             <button class="animated-button">
                 <span>Submit</span>
